--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@splidejs/react-splide": "^0.7.12",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -26,11 +27,14 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-intersection-observer": "^9.5.2",
     "react-player": "^2.12.0",
+    "resend": "^1.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "zod": "^3.22.2",
     "zustand": "^4.4.1"
   }
 }
