--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "framer-motion": "^10.13.0",
     "grained": "^0.0.2",
     "gsap": "^3.12.2",
-    "next": "13.4.10",
+    "next": "^14.0.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
