--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@upstash/redis": "^1.25.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
@@ -30,6 +32,7 @@
     "react-hook-form": "^7.46.1",
     "react-intersection-observer": "^9.5.2",
     "react-player": "^2.12.0",
+    "resend": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
