--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "@upstash/redis": "^1.25.1",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
