--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "typescript": "5.1.6",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2"
   }
 }
