--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.46.1",
     "react-intersection-observer": "^9.5.2",
     "react-player": "^2.12.0",
+    "react-remove-scroll-bar": "^2.3.6",
     "resend": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "prettier": "^3.3.1",
-    "prettier-plugin-tailwindcss": "^0.6.2"
+    "prettier-plugin-tailwindcss": "^0.6.2",
+    "tailwind-scrollbar": "^3.1.0"
   }
 }
