--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.46.1",
     "react-intersection-observer": "^9.5.2",
     "react-player": "^2.12.0",
